fixed anchor tag bleeding over nav

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,6 @@
 .navbar {
   width: 100%;
-  height: 225px;
+  height: 200px;
 	padding: 0%;
 	margin: auto 0%;
   background-image: url("../imgs/gtoBanner.jpg"); 
@@ -162,19 +162,27 @@ background-size: cover;
 @media screen and (max-width: 851px) {
   .loginTitleDiv {
     opacity: 0.95;
-    margin-top: 1%;
-    display: flex;
-    justify-content: center;
+  height: 100%;
+  width: 50%;
   
   }
+
+  .loginTitle_anchor {
+    margin: auto;
+    display: block;
+    margin: auto;
+    height: 40%;
+    width: 100%;
+   }
+
   .pueblos_logo_img {
     opacity: .95;
     margin-top: 15%;
     margin-right: 32.5%;
     object-fit: cover;
     border: 3px solid white;
-    width: 35%;
-    height: 35%;
+    width: 100%;
+    height: 100%;
     border-radius: 25% 25%;
   }
  
@@ -218,18 +226,25 @@ background-size: cover;
 #dropDown{ 
  justify-content: center;
  opacity: .9;
+ width: 90%;
  padding: 1% 2%;
- background-color: #2c9ff5;
+ margin: 2% 0%;
+ background-color: #90a9bd;
  color: black;
- font-size: .75rem;
- border-radius: 25% 25%;
+ font-size: .95rem;
+ font-weight: 500;
 }
 #dropDown option{
   width: 80%;
   margin: auto;
 }
 .mapContainer{
-  width: 95%;
+  
+  margin-top: 2.5%;
+  width: 90%;
+  height: 75%;
+  border: 3px solid rgb(221, 124, 140);
+
 }
 .map {
   width: auto;
