--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,20 +1,28 @@
 
 .loginTitleDiv {
   opacity: 0.95;
-  margin-top: 5%;
-  margin-left: -10%;
+  height: 100%;
+  width: 25%;
   display: flex;
   justify-content: flex-start;
 
 }
 
+.loginTitle_anchor {
+ display: block;
+ margin: auto;
+ height: 50%;
+ width: 50%;
+}
+
 
 .pueblos_logo_img {
+  display: block;
   opacity: .95;
   object-fit: cover;
   border: 3px solid white;
-  width: 50%;
-  height: 50%;
+  width: 100%;
+  height: 100%;
   border-radius: 25% 25%;
 }
 .btn {
